--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,11 @@
                 android:layout_height="wrap_content" android:textSize="14dp"
                 android:text="20 April 2012, 20:08 PM"/>
 
-<!--            <fragment-->
-<!--                android:id="@+id/autocomplete_fragment"-->
-<!--                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content" />-->
+            <fragment android:id="@+id/autocomplete_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                />
         </LinearLayout>
 
 
